--- a/04-Training_Models.ipynb
+++ b/04-Training_Models.ipynb
@@ -23,31 +23,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Chapter 4. Training Models"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this section, we explore the inner workings of Machine Learning models and their training algorithms. While many tasks can be accomplished without understanding the details, having a good grasp of how these models function can greatly aid in selecting appropriate models, training algorithms, and hyperparameters. This knowledge also facilitates debugging and error analysis, and it forms the foundation for comprehending, building, and training neural networks, which will be discussed in Part II of the book.\n",
-    "\n",
-    "The chapter begins with a focus on Linear Regression, a straightforward model. It examines two distinct training approaches: a direct \"closed-form\" equation that computes the model parameters for the best fit, and Gradient Descent (GD), an iterative optimization method that gradually refines the model parameters by minimizing the cost function over the training set. Various forms of GD, such as Batch GD, Mini-batch GD, and Stochastic GD, are explored, as they will be employed frequently in the study of neural networks in Part II.\n",
-    "\n",
-    "Moving forward, we delve into Polynomial Regression, a more complex model capable of fitting nonlinear datasets. Given its higher parameter count, it is more susceptible to overfitting, so the chapter explores methods to detect and mitigate this issue. Lastly, two widely used models for classification tasks, Logistic Regression, and Softmax Regression, are presented."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Setup\n",
     "\n",
@@ -99,7 +74,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In linear regression, the goal is to model a relationship between a dependent variable (life satisfaction, denoted as ŷ) and one or more independent variables (GDP_per_capita, denoted as x). The model's parameters, θ0 (bias term) and θ1 to θn (feature weights), determine the relationship. The model makes predictions by computing a weighted sum of the input features along with the bias term.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## The Normal Equation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The process of finding the optimal value of θ to minimize the cost function in a linear regression model can be achieved using a closed-form solution known as the Normal Equation. This equation provides a direct mathematical solution to determine the ideal parameter values. By solving the Normal Equation, one can obtain the most accurate and efficient values for θ without the need for iterative optimization algorithms.\n",
+    "\n",
+    "The Normal Equation is particularly advantageous for smaller datasets, as its time complexity grows linearly with the number of features, making it computationally efficient for such cases. However, for larger datasets, the computational burden increases significantly, as the time complexity becomes cubic with the number of features. Therefore, in cases with large datasets, gradient descent or other iterative optimization techniques are often preferred.\n",
+    "\n",
+    "In summary, the Normal Equation offers a direct mathematical approach to find optimal parameter values in linear regression models without the need for iterative optimization. While it is efficient for smaller datasets, its computational efficiency diminishes with larger datasets, where gradient descent may be a more suitable alternative"
    ]
   },
   {
@@ -365,8 +358,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gradient Descent\n",
+    "# Gradient Descent\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gradient Descent is a versatile optimization algorithm used to find optimal solutions for various problems. The fundamental concept behind Gradient Descent is to iteratively adjust parameters to minimize a given cost function. An analogy to being lost in foggy mountains helps illustrate its operation: just as you'd move downhill in the direction of the steepest slope to reach the valley's bottom quickly, Gradient Descent calculates the local gradient of the error function with respect to the parameter vector θ and proceeds in the direction of the descending gradient. When the gradient becomes zero, the algorithm has reached a minimum point, indicating an optimal solution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Batch Gradient Descent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Batch Gradient Descent is a variant of the Gradient Descent optimization algorithm used to find optimal solutions for various machine learning models. Unlike traditional Gradient Descent, which updates parameters after evaluating the gradient for each training instance, Batch Gradient Descent computes the gradient for the entire training dataset. It accumulates the gradients across all instances and then performs a single parameter update, making it computationally expensive for large datasets. However, this method leads to more stable convergence towards the global minimum and is often preferred when dataset size allows for efficient matrix operations."
    ]
   },
   {
@@ -494,6 +507,13 @@
    "metadata": {},
    "source": [
     "## Stochastic Gradient Descent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stochastic Gradient Descent (SGD) is an optimization algorithm commonly used in machine learning for finding optimal solutions. Unlike Batch Gradient Descent, which computes the gradient using the entire training dataset, SGD updates the model's parameters incrementally and randomly selects one training instance at a time to calculate the gradient. This stochastic nature introduces more noise but allows for much faster updates and makes it computationally efficient, especially for large datasets. Though it exhibits more frequent oscillations, the noise can help escape local minima and potentially find better global optima. Despite its increased variance, SGD remains a popular choice for training large-scale machine learning models."
    ]
   },
   {
@@ -633,6 +653,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mini-batch Gradient Descent is a variation of the Gradient Descent optimization algorithm commonly used in large-scale machine learning tasks. It strikes a balance between Batch Gradient Descent and Stochastic Gradient Descent by computing the gradients on smaller subsets, or mini-batches, of the training data. These mini-batches enable faster updates to the model's parameters compared to the batch approach, making it computationally efficient and reducing variance compared to stochastic updates. The mini-batch size is a hyperparameter that can be adjusted based on hardware capabilities and dataset characteristics, offering a flexible and practical optimization method for training deep learning models and handling large datasets."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -737,6 +764,17 @@
    "metadata": {},
    "source": [
     "# Polynomial Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Polynomial Regression is a form of regression analysis used to model the relationship between the independent variable(s) and the dependent variable by fitting a polynomial equation to the data points. \n",
+    "\n",
+    "Unlike linear regression, which assumes a linear relationship, polynomial regression can capture non-linear patterns by introducing higher-order polynomial terms. \n",
+    "\n",
+    "The degree of the polynomial determines the complexity of the model, allowing it to flexibly fit various data patterns. However, higher degrees can lead to overfitting, so careful selection of the polynomial degree is essential. Polynomial Regression is a valuable tool when the data exhibits non-linear trends and can be employed in various fields, such as economics, physics, and engineering, to model complex relationships between variables."
    ]
   },
   {
@@ -947,6 +985,17 @@
    "metadata": {},
    "source": [
     "# Learning Curves"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Learning curves provide valuable insights into a model's performance and help determine whether it is overfitting or underfitting. \n",
+    "\n",
+    "In the context of high-degree Polynomial Regression, a model can overfit the training data, while a linear model may underfit it. To assess a model's generalization, cross-validation is used, where good performance on training data but poor performance on cross-validation metrics indicates overfitting. \n",
+    "\n",
+    "On the other hand, poor performance on both suggests underfitting. Learning curves are plotted to visualize the model's performance on the training and validation sets relative to the training set size or iteration. By training the model on various-sized subsets of the training data, one can gain insights into the model's complexity and potential overfitting or underfitting tendencies."
    ]
   },
   {
