--- a/06-Decision_Trees.ipynb
+++ b/06-Decision_Trees.ipynb
@@ -363,6 +363,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s check this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.90740741, 0.09259259]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree_clf.predict_proba([[5, 1.5]])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree_clf.predict([[5, 1.5]])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The estimated probabilities remain the same throughout the bottom-right rectangle of Figure 6-2. For instance, if the flower's petal lengths were 6 cm and 1.5 cm wide, the probabilities would be identical to the previous case, despite it being more likely to be an Iris virginica in this scenario. This limitation of Decision Trees is due to their binary nature, where each leaf node predicts a single class, and they cannot represent probabilities accurately for regions with mixed instances."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regularization Hyperparameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
