--- a/06-Decision_Trees.ipynb
+++ b/06-Decision_Trees.ipynb
@@ -948,6 +948,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Decision Trees offer simplicity, interpretability, versatility, and potency in various applications; however, they exhibit certain limitations. Notably, they prefer orthogonal decision boundaries, rendering them sensitive to data rotations. \n",
+    "\n",
+    "For instance, a rotated dataset can lead to complex and less effective decision boundaries. This sensitivity extends to even minor fluctuations in training data, illustrated by a distinct Decision Tree model arising from the exclusion of a single outlier. Scikit-Learn's stochastic training algorithm further contributes to variability in models. \n",
+    "\n",
+    "To mitigate these concerns, techniques like Principal Component Analysis can be employed to improve data orientation. \n",
+    "\n",
+    "Random Forests, explored in the subsequent chapter, mitigate instability by averaging predictions across multiple trees."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
