--- a/07-Ensemble_Learning.ipynb
+++ b/07-Ensemble_Learning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ensemble Learning and Random Forests"
+    "# Chapter 7. Ensemble Learning and Random Forests"
    ]
   },
   {
