--- a/08-Dimensionality_Reduction.ipynb
+++ b/08-Dimensionality_Reduction.ipynb
@@ -42,6 +42,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Two primary approaches to dimensionality reduction, projection, and Manifold Learning, are essential concepts for addressing the curse of dimensionality. Projection involves identifying a lower-dimensional subspace within which training instances predominantly reside, driven by the observation that real-world instances are not uniformly distributed across all dimensions. This is illustrated by projecting a 3D dataset onto a 2D subspace, where instances lie close to a plane, thus reducing dimensionality. \n",
+    "\n",
+    "However, projecting might not be ideal when the subspace twists, as shown by the Swiss roll dataset, where simple projection would distort the data's inherent structure. In contrast, Manifold Learning deals with 2D or d-dimensional manifolds that can be flexibly contorted within a higher-dimensional space. Algorithms in this category aim to model the manifold underlying training instances. The manifold assumption posits that high-dimensional datasets tend to lie near lower-dimensional manifolds, often observed empirically, driven by inherent constraints on data generation. This assumption implies that expressing tasks in a lower-dimensional manifold space could simplify problem-solving. \n",
+    "\n",
+    "This assumption's applicability can vary; while some tasks may indeed be simpler in the manifold space, others could experience increased complexity, contingent on the specific dataset. Dimensionality reduction, though generally beneficial for speeding up model training, may not universally lead to better or simpler solutions, the outcome being contingent upon the dataset's nature."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
