--- a/08-Dimensionality_Reduction.ipynb
+++ b/08-Dimensionality_Reduction.ipynb
@@ -64,7 +64,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Principal Component Analysis (PCA) stands as a widely adopted dimensionality reduction technique. It operates by initially identifying the hyperplane that exhibits the nearest proximity to the dataset. Following this, PCA proceeds to project the data onto this identified hyperplane. The core principle underlying PCA involves extracting orthogonal axes known as principal components from the original feature space, prioritizing those axes that capture maximum variance in the data. These components correspond to directions that effectively represent the dataset's variability. PCA's primary objective is to transform the data into a new coordinate system, where the first principal component aligns with the direction of greatest variance, the second principal component becomes orthogonal to the first and captures the next highest variance, and so on. This transformation results in reduced dimensions, allowing for a compact representation of the data while preserving the most significant variance.\n",
+    "Principal Component Analysis (PCA) stands as a widely adopted dimensionality reduction technique. It operates by initially identifying the hyperplane that exhibits the nearest proximity to the dataset. Following this, PCA proceeds to project the data onto this identified hyperplane. The core principle underlying PCA involves extracting orthogonal axes known as principal components from the original feature space, prioritizing those axes that capture maximum variance in the data. \n",
+    "\n",
+    "These components correspond to directions that effectively represent the dataset's variability. PCA's primary objective is to transform the data into a new coordinate system, where the first principal component aligns with the direction of greatest variance, the second principal component becomes orthogonal to the first and captures the next highest variance, and so on. This transformation results in reduced dimensions, allowing for a compact representation of the data while preserving the most significant variance.\n",
     "\n",
     "In summary, PCA seeks to simplify the complexity of high-dimensional data by projecting it onto a lower-dimensional subspace defined by principal components. These components are chosen to encapsulate the most substantial variability within the dataset, enabling a streamlined representation that retains essential information while shedding the less informative dimensions."
    ]
@@ -110,6 +112,31 @@
     "    if tight_layout:\n",
     "        plt.tight_layout()\n",
     "    plt.savefig(path, format=fig_extension, dpi=resolution)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Building a simple 3D dataset:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(4)\n",
+    "m = 60\n",
+    "w1, w2 = 0.1, 0.3\n",
+    "noise = 0.1\n",
+    "\n",
+    "angles = np.random.rand(m) * 3 * np.pi / 2 - 0.5\n",
+    "X = np.empty((m, 3))\n",
+    "X[:, 0] = np.cos(angles) + np.sin(angles)/2 + noise * np.random.randn(m) / 2\n",
+    "X[:, 1] = np.sin(angles) * 0.7 + noise * np.random.randn(m) / 2\n",
+    "X[:, 2] = X[:, 0] * w1 + X[:, 1] * w2 + noise * np.random.randn(m)"
    ]
   },
   {
