--- a/09-Unsupervised_Learning_Techniques.ipynb
+++ b/09-Unsupervised_Learning_Techniques.ipynb
@@ -35,7 +35,9 @@
     "\n",
     "Consider the illustration provided in the text, featuring the iris dataset. On the left, this dataset is equipped with labeled species information, rendering it suitable for classification techniques. On the right, the labels are absent, making conventional classification methods ineffective. \n",
     "\n",
-    "Here, clustering algorithms come into play. While the lower-left cluster is visually apparent and detectable by both humans and algorithms, the upper-right cluster is more intricate, as it contains two distinct sub-clusters. The dataset's additional features, not visualized in this representation, further enable clustering algorithms to effectively categorize instances. Employing techniques like Gaussian mixture models, these algorithms can accurately identify the underlying clusters within the dataset, even achieving a high level of accuracy such as classifying only 5 instances out of 150 incorrectly."
+    "Here, clustering algorithms come into play. While the lower-left cluster is visually apparent and detectable by both humans and algorithms, the upper-right cluster is more intricate, as it contains two distinct sub-clusters. The dataset's additional features, not visualized in this representation, further enable clustering algorithms to effectively categorize instances. \n",
+    "\n",
+    "Employing techniques like Gaussian mixture models, these algorithms can accurately identify the underlying clusters within the dataset, even achieving a high level of accuracy such as classifying only 5 instances out of 150 incorrectly."
    ]
   },
   {
