--- a/09-Unsupervised_Learning_Techniques.ipynb
+++ b/09-Unsupervised_Learning_Techniques.ipynb
@@ -263,6 +263,110 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "145"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(y_pred==y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9666666666666667"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(y_pred==y) / len(y_pred)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clustering is a versatile technique applied across a range of domains and use cases:\n",
+    "\n",
+    "- For Customer Segmentation:\n",
+    "\n",
+    "Clustering assists in categorizing customers based on their purchase behavior and website activity.\n",
+    "This segmentation informs personalized product recommendations and tailored marketing strategies.\n",
+    "\n",
+    "- For Data Analysis:\n",
+    "\n",
+    "Clustering helps dissect a new dataset by dividing it into distinct groups.\n",
+    "Each cluster can be individually analyzed, offering insights into patterns and characteristics within the data.\n",
+    "\n",
+    "- As a Dimensionality Reduction Technique:\n",
+    "\n",
+    "After clustering, each instance's affinity with clusters can be measured, resulting in a lower-dimensional representation of the data.\n",
+    "This reduced-dimensional vector retains sufficient information for further processing, offering computational advantages.\n",
+    "\n",
+    "- For Anomaly Detection:\n",
+    "\n",
+    "Instances with low affinity to all clusters are typically considered anomalies.\n",
+    "Anomaly detection is valuable for identifying unusual behavior, such as defects in manufacturing or fraudulent activities.\n",
+    "\n",
+    "- For Semi-Supervised Learning:\n",
+    "\n",
+    "Clustering can be employed to propagate a few labels to all instances within the same cluster.\n",
+    "This approach expands the labeled dataset, enhancing the performance of subsequent supervised learning algorithms.\n",
+    "\n",
+    "- For Search Engines:\n",
+    "\n",
+    "Clustering assists in organizing images in a database, allowing for image similarity search.\n",
+    "Users can search for images resembling a reference image by finding the reference image's cluster and retrieving all images within that cluster.\n",
+    "\n",
+    "- To Segment Images:\n",
+    "\n",
+    "Pixel clustering based on color simplifies images by replacing each pixel's color with the mean color of its cluster.\n",
+    "This technique is employed in object detection and tracking systems for contour detection.\n",
+    "It's important to note that the definition of a cluster varies depending on the context, with different algorithms capturing different cluster types. Some algorithms focus on centroids, while others identify densely packed regions with various shapes. Additionally, hierarchical algorithms seek clusters within clusters, offering flexibility for diverse applications. This section explores the applications of popular clustering algorithms like KMeans and DBSCAN, showcasing their utility in nonlinear dimensionality reduction, semi-supervised learning, and anomaly detection."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# K-Means"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The K-Means algorithm, initially introduced in the context of pulse-code modulation at Bell Labs in 1957 and later independently by Edward W. Forgy in 1965, offers a straightforward yet effective approach to clustering datasets with distinct groups or clusters. Key points regarding K-Means include:\n",
+    "\n",
+    "- Clustering Efficiency: K-Means excels in efficiently clustering datasets with clearly defined clusters, often converging in just a few iterations.\n",
+    "- Centroid-Based Clustering: It operates based on centroid positions, aiming to place cluster centers in positions that minimize the sum of squared distances between data points and their nearest centroids.\n",
+    "- Versatility: K-Means is widely used in various domains due to its simplicity and effectiveness in finding clusters.\n",
+    "- Lloyd-Forgy Algorithm: Also known as Lloyd-Forgy, it signifies the algorithm's dual authorship and has since become a fundamental clustering technique.\n",
+    "\n",
+    "K-Means stands as a robust and computationally efficient clustering method, particularly well-suited for datasets featuring well-defined clusters. Its widespread usage extends to numerous applications, making it a foundational tool in clustering analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
