--- a/10-Introduction_to_Artificial_Neural_Networks.ipynb
+++ b/10-Introduction_to_Artificial_Neural_Networks.ipynb
@@ -697,6 +697,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-03 23:32:33.443905: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:306] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2023-09-03 23:32:33.446155: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:272] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metal device set to: Apple M1\n",
+      "\n",
+      "systemMemory: 8.00 GB\n",
+      "maxCacheSize: 2.67 GB\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = keras.models.Sequential()\n",
+    "model.add(keras.layers.Flatten(input_shape=[28, 28]))\n",
+    "model.add(keras.layers.Dense(300, activation=\"relu\"))\n",
+    "model.add(keras.layers.Dense(100, activation=\"relu\"))\n",
+    "model.add(keras.layers.Dense(10, activation=\"softmax\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
