--- a/10-Introduction_to_Artificial_Neural_Networks.ipynb
+++ b/10-Introduction_to_Artificial_Neural_Networks.ipynb
@@ -741,6 +741,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = keras.models.Sequential([\n",
+    "    keras.layers.Flatten(input_shape=[28, 28]),\n",
+    "    keras.layers.Dense(300, activation=\"relu\"),\n",
+    "    keras.layers.Dense(100, activation=\"relu\"),\n",
+    "    keras.layers.Dense(10, activation=\"softmax\")\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
