--- a/10-Introduction_to_Artificial_Neural_Networks.ipynb
+++ b/10-Introduction_to_Artificial_Neural_Networks.ipynb
@@ -755,6 +755,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<keras.layers.reshaping.flatten.Flatten at 0x19769e4a0>,\n",
+       " <keras.layers.core.dense.Dense at 0x197185bd0>,\n",
+       " <keras.layers.core.dense.Dense at 0x197187d90>,\n",
+       " <keras.layers.core.dense.Dense at 0x197185ae0>]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.layers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
