--- a/10-Introduction_to_Artificial_Neural_Networks.ipynb
+++ b/10-Introduction_to_Artificial_Neural_Networks.ipynb
@@ -979,6 +979,92 @@
      "text": [
       "Epoch 1/30\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-03 23:36:27.437641: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1719/1719 [==============================] - ETA: 0s - loss: 0.7250 - accuracy: 0.7605"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-03 23:37:00.348469: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1719/1719 [==============================] - 35s 19ms/step - loss: 0.7250 - accuracy: 0.7605 - val_loss: 0.5306 - val_accuracy: 0.8232\n",
+      "Epoch 2/30\n",
+      "1719/1719 [==============================] - 27s 16ms/step - loss: 0.4910 - accuracy: 0.8288 - val_loss: 0.4428 - val_accuracy: 0.8466\n",
+      "Epoch 3/30\n",
+      "1719/1719 [==============================] - 1484s 864ms/step - loss: 0.4428 - accuracy: 0.8444 - val_loss: 0.5155 - val_accuracy: 0.8096\n",
+      "Epoch 4/30\n",
+      "1719/1719 [==============================] - 32s 19ms/step - loss: 0.4148 - accuracy: 0.8553 - val_loss: 0.3967 - val_accuracy: 0.8642\n",
+      "Epoch 5/30\n",
+      "1719/1719 [==============================] - 6863s 4s/step - loss: 0.3949 - accuracy: 0.8620 - val_loss: 0.3819 - val_accuracy: 0.8674\n",
+      "Epoch 6/30\n",
+      "1719/1719 [==============================] - 6873s 4s/step - loss: 0.3759 - accuracy: 0.8674 - val_loss: 0.3757 - val_accuracy: 0.8700\n",
+      "Epoch 7/30\n",
+      "1719/1719 [==============================] - 7005s 4s/step - loss: 0.3631 - accuracy: 0.8725 - val_loss: 0.3649 - val_accuracy: 0.8694\n",
+      "Epoch 8/30\n",
+      "1719/1719 [==============================] - 6845s 4s/step - loss: 0.3516 - accuracy: 0.8750 - val_loss: 0.3949 - val_accuracy: 0.8588\n",
+      "Epoch 9/30\n",
+      "1719/1719 [==============================] - 4903s 3s/step - loss: 0.3408 - accuracy: 0.8787 - val_loss: 0.3531 - val_accuracy: 0.8706\n",
+      "Epoch 10/30\n",
+      "1719/1719 [==============================] - 4928s 3s/step - loss: 0.3315 - accuracy: 0.8816 - val_loss: 0.3483 - val_accuracy: 0.8772\n",
+      "Epoch 11/30\n",
+      "1719/1719 [==============================] - 6175s 4s/step - loss: 0.3235 - accuracy: 0.8837 - val_loss: 0.3426 - val_accuracy: 0.8806\n",
+      "Epoch 12/30\n",
+      "1719/1719 [==============================] - 5927s 3s/step - loss: 0.3145 - accuracy: 0.8873 - val_loss: 0.3298 - val_accuracy: 0.8824\n",
+      "Epoch 13/30\n",
+      "1719/1719 [==============================] - 6999s 4s/step - loss: 0.3080 - accuracy: 0.8907 - val_loss: 0.3306 - val_accuracy: 0.8846\n",
+      "Epoch 14/30\n",
+      "1719/1719 [==============================] - 5998s 3s/step - loss: 0.3019 - accuracy: 0.8913 - val_loss: 0.3451 - val_accuracy: 0.8736\n",
+      "Epoch 15/30\n",
+      "1719/1719 [==============================] - 6438s 4s/step - loss: 0.2943 - accuracy: 0.8944 - val_loss: 0.3294 - val_accuracy: 0.8780\n",
+      "Epoch 16/30\n",
+      "1719/1719 [==============================] - 218s 127ms/step - loss: 0.2897 - accuracy: 0.8969 - val_loss: 0.3107 - val_accuracy: 0.8862\n",
+      "Epoch 17/30\n",
+      "1719/1719 [==============================] - 1017s 592ms/step - loss: 0.2839 - accuracy: 0.8986 - val_loss: 0.3509 - val_accuracy: 0.8742\n",
+      "Epoch 18/30\n",
+      "1719/1719 [==============================] - 16s 9ms/step - loss: 0.2783 - accuracy: 0.8994 - val_loss: 0.3096 - val_accuracy: 0.8872\n",
+      "Epoch 19/30\n",
+      "1719/1719 [==============================] - 16s 9ms/step - loss: 0.2735 - accuracy: 0.9013 - val_loss: 0.3167 - val_accuracy: 0.8872\n",
+      "Epoch 20/30\n",
+      "1719/1719 [==============================] - 16s 9ms/step - loss: 0.2684 - accuracy: 0.9040 - val_loss: 0.3297 - val_accuracy: 0.8778\n",
+      "Epoch 21/30\n",
+      "1719/1719 [==============================] - 16s 9ms/step - loss: 0.2633 - accuracy: 0.9048 - val_loss: 0.3060 - val_accuracy: 0.8898\n",
+      "Epoch 22/30\n",
+      "1719/1719 [==============================] - 16s 9ms/step - loss: 0.2584 - accuracy: 0.9073 - val_loss: 0.2952 - val_accuracy: 0.8916\n",
+      "Epoch 23/30\n",
+      "1719/1719 [==============================] - 16s 9ms/step - loss: 0.2546 - accuracy: 0.9072 - val_loss: 0.2969 - val_accuracy: 0.8914\n",
+      "Epoch 24/30\n",
+      "1719/1719 [==============================] - 16s 9ms/step - loss: 0.2506 - accuracy: 0.9094 - val_loss: 0.3072 - val_accuracy: 0.8876\n",
+      "Epoch 25/30\n",
+      "1719/1719 [==============================] - 16s 9ms/step - loss: 0.2463 - accuracy: 0.9111 - val_loss: 0.2965 - val_accuracy: 0.8930\n",
+      "Epoch 26/30\n",
+      "1719/1719 [==============================] - 16s 9ms/step - loss: 0.2426 - accuracy: 0.9130 - val_loss: 0.3076 - val_accuracy: 0.8888\n",
+      "Epoch 27/30\n",
+      "1719/1719 [==============================] - 16s 9ms/step - loss: 0.2385 - accuracy: 0.9140 - val_loss: 0.2959 - val_accuracy: 0.8914\n",
+      "Epoch 28/30\n",
+      "1719/1719 [==============================] - 16s 9ms/step - loss: 0.2351 - accuracy: 0.9158 - val_loss: 0.2993 - val_accuracy: 0.8910\n",
+      "Epoch 29/30\n",
+      "1719/1719 [==============================] - 16s 9ms/step - loss: 0.2306 - accuracy: 0.9167 - val_loss: 0.3057 - val_accuracy: 0.8890\n",
+      "Epoch 30/30\n",
+      "1719/1719 [==============================] - 16s 9ms/step - loss: 0.2270 - accuracy: 0.9186 - val_loss: 0.3038 - val_accuracy: 0.8896\n"
+     ]
     }
    ],
    "source": [
